--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --display-modules",
+    "build": "webpack",
     "buildlog": "webpack --json --profile > webpack.build-log.json",
     "buildsprite": "webpack --config webpack.config-sprite.js --display-modules",
     "buildspritelog": "webpack --config webpack.config-sprite.js --json --profile > webpack.build-sprite-log.json",
@@ -19,18 +19,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/photonstorm/phaser3-custom-build.git"
+    "url": "git+https://github.com/liurongqing/phaser3-custom-build.git"
   },
-  "author": "Richard Davey <rich@photonstorm.com> (http://www.photonstorm.com)",
+  "author": "Rongqing Liu <phpgege@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/photonstorm/phaser3-custom-build/issues"
+    "url": "https://github.com/liurongqing/phaser3-custom-build/issues"
   },
-  "homepage": "https://github.com/photonstorm/phaser3-custom-build#readme",
+  "homepage": "https://github.com/liurongqing/phaser3-custom-build#readme",
   "dependencies": {
+    "phaser": "^3.24.1",
+    "eventemitter3": "^4.0.0"
+  },
+  "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "eventemitter3": "^4.0.0",
-    "phaser": "^3.20.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
