--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "custom": "webpack --config webpack.config.js",
     "buildlog": "webpack --json --profile > webpack.build-log.json",
     "buildsprite": "webpack --config webpack.config-sprite.js --display-modules",
     "buildspritelog": "webpack --config webpack.config-sprite.js --json --profile > webpack.build-sprite-log.json",
